@@ -177,6 +177,9 @@
 <MODE NAME="moin"		FILE="moin.xml"
 				FILE_NAME_GLOB="*.moin" />
 
+<MODE NAME="mqsc"		FILE="mqsc.xml"
+				FILE_NAME_GLOB="*.mqsc" />
+
 <MODE NAME="netrexx"		FILE="netrexx.xml"
 				FILE_NAME_GLOB="*.nrx" />
 
